Fix up header link spacing, size, and organization

--- a/frontend/src/stylesheets/components/session/_form.scss
+++ b/frontend/src/stylesheets/components/session/_form.scss
@@ -1,15 +1,57 @@
 .sign-up {
-  width: 60%;
+  width: 1825px;
   background-color: $red;
 }
 
 .login {
-  width: 33%;
+  width: 1012px;
   background-color: $blue;
 }
 
 .password-disclaimer {
-  width: 400px;
+  width: 580px;
+  margin-bottom: 10px;
 }
 
+.session-button {
+  display: flex;
+  align-items: center;
+  padding: 20px 50px;
+  background-color: $yellow;
+  color: $red;
+}
+
+.session-button:hover {
+  background-color: #ffe681;
+  opacity: 1.6;
+}
+
+.session-button:active {
+  background-color: $yellow;
+}
+
+.demo-session-button {
+  background-color: $red;
+  color: $yellow;
+}
+
+.demo-session-button:hover {
+  background-color: #ff3939;
+  opacity: 1.8;
+}
+
+.demo-session-button:active {
+  background-color:  $yellow;
+  color: $red;
+}
+
+.bottom-form{
+  width: 100%;
+  height: 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-left: 110px;
+}
 
